--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="styles/image/favicon_io /apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="styles/image/favicon_io /favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="styles/image/favicon_io /favicon-16x16.png" />
-    <link rel="manifest" href="site.webmanifest" />
+    <link rel="manifest" href="/site.webmanifest" />
 
     <title>KOSCHEY</title>
 </head>
