--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
      </div>
      <div class="video-text">
-      <h1>  my fly fpv</h1>
+      <h1>  KOSCHEY RTF 7</h1>
      </div>
         </div>
 
