--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="styles/styles/mystyle.css" />
-    <link rel="stylesheet" href="styles/styles/bgvideo.css" />
-    <link rel="apple-touch-icon" sizes="180x180" href="styles/image/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="styles/image/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="styles/image/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="stylesheet" href="styles/styles/bgvideo.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="styles/image/favicon_io /apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="styles/image/favicon_io /favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="styles/image/favicon_io /favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
 
-    <title>KOSCHEY</title>
+    <title>КОЩЕЙ</title>
 </head>
 
 <body>
@@ -29,24 +29,27 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/">Home</a>
-                        </li>
+                       
 
                         <li class="nav-item">
-                            <a class="nav-link" href="price.html">Pricing</a>
+                            <a class="nav-link" href="price.html"> FPV </a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                Dropdown link
+                                МІНОШУКАЧІ
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><a class="dropdown-item"
+                                        href="https://metalloiskateli.com.ua/metalloiskateli/gruntovyye-metalloiskateli/koshchey/minoshukach-x45"
+                                        target="_blank">КОЩЕЙ45Х</a></li>
+                                <li><a class="dropdown-item" href="video.html" target="_blank">ВІДЕО</a></li>
                                 <li>
-                                    <a class="dropdown-item" href="#">Something else here</a>
+                                    <hr class="dropdown-divider">
                                 </li>
+                                <li><a class="dropdown-item"
+                                        href="https://metalloiskateli.com.ua/gruntovyye-metalloiskateli/koshchey"
+                                        target="_blank">МІНОШУКАЧІ</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -58,13 +61,13 @@
     <section>
 
         <div class="bgvideo">
-     <video src="styles/image/fpv-video.mp4" type="video/mp4" autoplay muted loop></video>
-     <div class="effect">
+            <video src="styles/image/fpv-video.mp4" type="video/mp4" autoplay muted loop></video>
+            <div class="effect">
 
-     </div>
-     <div class="video-text">
-      <h1>  KOSCHEY RTF 7</h1>
-     </div>
+            </div>
+            <div class="video-text">
+                <h1>KOSCHEY RTF 7</h1>
+            </div>
         </div>
 
         <div class="container-fluid ">
@@ -85,13 +88,16 @@
                                     aria-label="Slide 3"></button>
                                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
                                     aria-label="Slide 4"></button>
+                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                                    aria-label="Slide 5"></button>
                             </div>
                             <div class="carousel-inner px-4">
                                 <div class="carousel-item active">
                                     <div class="d-block w-100">
                                         <div class="row">
                                             <div class="col-lg-6 col-mg-6">
-                                               <a href="price.html"> <img src="styles/image/dronfpv.png" class="w-100" alt="dronfpv" /></a>
+                                                <a href="price.html"> <img src="styles/image/dronfpv.png" class="w-100"
+                                                        alt="dronfpv" /></a>
                                             </div>
                                             <div class="col-lg-6 col-mg-6 card-text">
                                                 <p class="slide-text">
@@ -107,12 +113,42 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="carousel-item">
+                                    <div class="d-block w-100">
+                                        <div class="row">
+                                            <div class="col-lg-6 col-mg-6 card-text">
+                                                <a href="video.html"> <img src="styles/image/x-45.png" class="w-100"
+                                                        alt="dronfpv" /></a>
+                                            </div>
+                                            <div class="col-lg-6 col-mg-6">
+                                                <p class="slide-text">
+                                                    Міношукач Х45 – прилад гібрид 2 в 1. Паралельно(одночасно) працює у
+                                                    статичному режимі (як професійні міношукач) та динамічному, як
+                                                    звичайний металлодетектор.
+
+                                                    Технологія динаміки, дає змогу не пропускати найскладніші міни із
+                                                    найменшим вмістом металу, як: МВП – 62, ПМН – 4, пластиковий МУВ та
+                                                    інші.
+
+                                                    Статична технологія, гарантує виявлення цілі при різній швидкості
+                                                    помаху. Та «просвічує» найскладніші типи грунтів. Добавляє
+                                                    інформативності по виявленню точного центру цілі, визначення глибини
+                                                    та форми об’єкту у грунті.
+
+                                                    Міношукач простий у використані. Увімкнули прилад, обрали одну із
+                                                    3-х запропонованих програм для саперів і проводимо пошук
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
 
                                 <div class="carousel-item">
                                     <div class="d-block w-100">
                                         <div class="row">
                                             <div class="col-lg-6 col-mg-6 card-text">
-                                               <a href="price.html"> <img src="styles/image/vision.jpeg" class="w-100" alt="dronfpv" /></a>
+                                                <a href="price.html"> <img src="styles/image/vision.jpeg" class="w-100"
+                                                        alt="dronfpv" /></a>
                                             </div>
                                             <div class="col-lg-6 col-mg-6">
                                                 <p class="slide-text">
@@ -132,7 +168,8 @@
                                     <div class="d-block w-100">
                                         <div class="row">
                                             <div class="col-lg-6 col-mg-6 card-text">
-                                              <a href="price.html">  <img src="styles/image/body.jpeg" class="w-100" alt="dronfpv" /></a>
+                                                <a href="price.html"> <img src="styles/image/body.jpeg" class="w-100"
+                                                        alt="dronfpv" /></a>
                                             </div>
                                             <div class="col-lg-6 col-mg-6">
                                                 <p class="slide-text">
@@ -154,7 +191,8 @@
                                     <div class="d-block w-100">
                                         <div class="row">
                                             <div class="col-lg-6 col-mg-6">
-                                               <a href="price.html"> <img src="styles/image/pult.png" class="w-100" alt="dronfpv" /></a>
+                                                <a href="price.html"> <img src="styles/image/pult.png" class="w-100"
+                                                        alt="dronfpv" /></a>
                                             </div>
                                             <div class="col-lg-6 col-mg-6 card-text">
                                                 <p class="slide-text">
@@ -189,20 +227,17 @@
                             </button>
                         </div>
                         <div class="col-lg12 col-md-12 text-center mt-4">
-                          <a href="price.html">
-                             <button type="button" class="btn btn-outline-primary btn-lg">Price</button>
-                            </a> 
+                            <a href="price.html">
+                                <button type="button" class="btn btn-outline-primary btn-lg">Price</button>
+                            </a>
                         </div>
 
                         <div class="col-lg12 col-md-12 text-center mt-4">
-                            <p> Can we help you?</p>
-
+                            <a href="https://send.monobank.ua/jar/78S16vcvuR" target="_blank"> 
+                                <button type="button" class="btn btn-outline-primary btn-lg">ЗБІР ДЛЯ ЗСУ</button>
+                            </a>
                         </div>
-                        <div class="col-lg12 col-md-12 text-center">
-
-                            <img class="call-anim" style="width: 55px; margin-inline: 1em"
-                                src="styles/image/telega.jpeg" alt="..." /></a>
-                        </div>
+                        
 
                     </div>
                 </div>
@@ -214,8 +249,10 @@
                                 Ласкаво просимо до KOSCHEY – це команда науковців та
                                 професіоналів з безпілотного обладнання та дронів. Ми в
                                 KOSCHEY віримо, що якісне обладнання,науковий та професійний
-                                підхід до кожного замовлення є ключем до успіху. Звертайтесь до нас, щоб переконатись у цьому самі!
-                                <a href="styles/image/IMG_0171.jpg" target="_blank">tell me>></a>
+                                підхід до кожного замовлення є ключем до успіху. Звертайтесь до нас, щоб переконатись у
+                                цьому самі!
+                                <a href="https://www.youtube.com/embed/Gqys69xD4uQ" target="_blank"
+                                    title="YouTube video player; autoplay; ">Ласкаво просимо на Виробництво>></a>
                             </p>
                         </div>
                         <div class="col-lg-12 sidebar my-1">
@@ -239,12 +276,12 @@
                     <p>All Rights Reserved 2023</p>
                 </div>
                 <div class="col-lg-4 col-md-12 footer-text text-center">
-                    <p>Contacts<br />Job<br />Our Team</p>
+                  <a href="https://www.work.ua/jobs/5394860/" target="_blank">  <p>Contacts<br />Job<br />Our Team</p></a>
                 </div>
                 <div class="col-lg-4 col-md-12 media-links">
-                    <a href="https://web.telegram.org/k/" target="_blank">
+                    <a href="https://web.telegram.org/k/#@brdprotiv" target="_blank">
                         <img style="width: 55px; margin-inline: 1em" src="styles/image/telega.jpeg" alt="..." /></a>
-                    <a href="https://www.youtube.com/watch?v=75SbiwqW7DM&t=33s" target="_blank"><img
+                    <a href="https://www.youtube.com/embed/Gqys69xD4uQ" target="_blank"><img
                             style="width: 55px; margin-inline: 1em" src="styles/image/yout.jpeg" alt="..." /></a>
                 </div>
             </div>
