--- a/price.html
+++ b/price.html
@@ -9,13 +9,12 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="styles/styles/mystyle.css" />
 
-   <link rel="apple-touch-icon" sizes="180x180" href="styles/image/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="styles/image/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="styles/image/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="styles/image/favicon_io /apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="styles/image/favicon_io /favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="styles/image/favicon_io /favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
 
-
-    <title>KOSCHEY</title>
+    <title>КОЩЕЙ</title>
 </head>
 
 <body>
@@ -31,11 +30,11 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="/">Home</a>
+                            <a class="nav-link" aria-current="page" href="/">КОЩЕЙ</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link active" href="price.html">Pricing</a>
+                            <a class="nav-link active" href="video.html">МІНОШУКАЧІ</a>
                         </li>
                     </ul>
                 </div>
@@ -48,17 +47,36 @@
             <div class="row">
                 <div class="col-lg-1"></div>
 
+
+
                 <div class="col-lg-8 col-md-12">
                     <div class="row">
+
+                        <div class="col-lg-4 col-md-6 mt-4">
+                            <div class="card">
+                                <img src="styles/image/pricefpv.png" class="card-img-top" alt="dronfpv" />
+                                <div class="card-body">
+                                    <h5 class="card-title">FPV ДРОН</h5>
+                                    <p class="card-text">
+                                        FPV дрон камікадзе 1.5кг KOSCHEY RTF 7" Model 3 FPV (First Person View )
+                                    </p>
+                                    <a href="https://send.monobank.ua/jar/78S16vcvuR" target="_blank"
+                                        class="btn btn-primary">ЗАДОНАТИТИ</a>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="col-lg-4 col-md-6 mt-4">
                             <div class="card">
                                 <img src="styles/image/body.jpeg" class="card-img-top" alt="body" />
                                 <div class="card-body">
                                     <h5 class="card-title">РАМА</h5>
                                     <p class="card-text">
-                                        Рама для квадрокоптера Mark4 7 Frame FPV (карбон) хорошая модель для сборки (long range) (Mark4 7)
+                                        Рама для квадрокоптера Mark4 7 Frame FPV (карбон) хорошая модель для сборки
+                                        (long range) (Mark4 7)
                                     </p>
-                                    <a href="https://send.monobank.ua/jar/78S16vcvuR" target="_blank" class="btn btn-primary">ЗАДОНАТИТИ</a>
+                                    <a href="https://send.monobank.ua/jar/78S16vcvuR" target="_blank"
+                                        class="btn btn-primary">ЗАДОНАТИТИ</a>
                                 </div>
                             </div>
                         </div>
@@ -72,7 +90,8 @@
 
 
                                     </p>
-                                    <a href="https://send.monobank.ua/jar/78S16vcvuR" target="_blank" class="btn btn-primary">ЗАДОНАТИТИ</a>
+                                    <a href="https://send.monobank.ua/jar/78S16vcvuR" target="_blank"
+                                        class="btn btn-primary">ЗАДОНАТИТИ</a>
                                 </div>
                             </div>
                         </div>
@@ -85,7 +104,8 @@
                                     <p class="card-text">
                                         FPV камера аналоговая Foxeer T-Rex Mini 1500TVL M12 L1.7 курсова
                                     </p>
-                                    <a href="https://send.monobank.ua/jar/78S16vcvuR" target="_blank" class="btn btn-primary">ЗАДОНАТИТИ</a>
+                                    <a href="https://send.monobank.ua/jar/78S16vcvuR" target="_blank"
+                                        class="btn btn-primary">ЗАДОНАТИТИ</a>
                                 </div>
                             </div>
                         </div>
@@ -95,34 +115,25 @@
                                 <div class="card-body">
                                     <h5 class="card-title">ПОЛІТНИЙ СТЕК</h5>
                                     <p class="card-text">
-                                        Політний стек SpeedyBee F405 V3 з ESC 50A 3-6s BLHeli_S 4в1 30x30мм 
+                                        Політний стек SpeedyBee F405 V3 з ESC 50A 3-6s BLHeli_S 4в1 30x30мм
                                     </p>
-                                    <a href="https://send.monobank.ua/jar/78S16vcvuR" target="_parent" class="btn btn-primary">ЗАДОНАТИТИ</a>
+                                    <a href="https://send.monobank.ua/jar/78S16vcvuR" target="_parent"
+                                        class="btn btn-primary">ЗАДОНАТИТИ</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 mt-4">
-                            <div class="card">
-                                <img src="styles/image/dronfpv.png" class="card-img-top" alt="dronfpv" />
-                                <div class="card-body">
-                                    <h5 class="card-title">FPV ДРОН</h5>
-                                    <p class="card-text">
-                                        FPV дрон камікадзе 1.5кг KOSCHEY RTF 7" Model 3
-                                    </p>
-                                    <a href="https://send.monobank.ua/jar/78S16vcvuR" target="_blank" class="btn btn-primary">ЗАДОНАТИТИ</a>
-                                </div>
-                            </div>
-                        </div>
+
                         <div class="col-lg-4 col-md-6 mt-4">
                             <div class="card">
                                 <img src="styles/image/motor.png" class="card-img-top" alt="motor" />
                                 <div class="card-body">
                                     <h5 class="card-title">МОТОР</h5>
                                     <p class="card-text">
-                                       	
-                                       Мотор BrotherHobby Avenger 3008 1300KV для квадрокоптера (HM)    
+
+                                        Мотор BrotherHobby Avenger 3008 1300KV для квадрокоптера (HM)
                                     </p>
-                                    <a href="https://send.monobank.ua/jar/78S16vcvuR" target="_blank" class="btn btn-primary">ЗАДОНАТИТИ</a>
+                                    <a href="https://send.monobank.ua/jar/78S16vcvuR" target="_blank"
+                                        class="btn btn-primary">ЗАДОНАТИТИ</a>
                                 </div>
                             </div>
                         </div>
@@ -134,7 +145,8 @@
                                     <p class="card-text">
                                         Пропеллеры GemFan Freestyle 6032-3 поликарбонат 2CCW+2CW (Midnight Gray) (HM)
                                     </p>
-                                    <a href="https://send.monobank.ua/jar/78S16vcvuR" target="_blank" class="btn btn-primary">ЗАДОНАТИТИ</a>
+                                    <a href="https://send.monobank.ua/jar/78S16vcvuR" target="_blank"
+                                        class="btn btn-primary">ЗАДОНАТИТИ</a>
                                 </div>
                             </div>
                         </div>
@@ -146,7 +158,8 @@
                                     <p class="card-text">
                                         FPV передатчик TBS Unify Pro32 HV 5,8 ГГц (MMCX)
                                     </p>
-                                    <a href="https://send.monobank.ua/jar/78S16vcvuR" target="_blank" class="btn btn-primary">ЗАДОНАТИТИ</a>
+                                    <a href="https://send.monobank.ua/jar/78S16vcvuR" target="_blank"
+                                        class="btn btn-primary">ЗАДОНАТИТИ</a>
                                 </div>
                             </div>
                         </div>
@@ -158,7 +171,8 @@
                                     <p class="card-text">
                                         Окуляри DJI FPV Goggles
                                     </p>
-                                    <a href="https://send.monobank.ua/jar/78S16vcvuR" target="_blank" class="btn btn-primary">ЗАДОНАТИТИ</a>
+                                    <a href="https://send.monobank.ua/jar/78S16vcvuR" target="_blank"
+                                        class="btn btn-primary">ЗАДОНАТИТИ</a>
                                 </div>
                             </div>
                         </div>
@@ -169,14 +183,32 @@
                     <div class="row px-2">
                         <div class="col-lg-12 sidebar my-4">
                             <p>
-                                FPV (First Person View – від першої особи) дрон це ефективний та сучасний безпілотний літальний апарат з відеокамерою, основна мета якого – знищити техніку ворога дистанційно. В рамках бойових дій вони є надзвичайно ефективними, бо дозволяють полювати на російську техніку на безпечній відстані, знижуючи ризик життю наших захисників. Тому ми оголошуємо збір на FPV квадрокоптери.
+                                FPV (First Person View – від першої особи) дрон це ефективний та сучасний безпілотний
+                                літальний апарат з відеокамерою, основна мета якого – знищити техніку ворога
+                                дистанційно. В рамках бойових дій вони є надзвичайно ефективними, бо дозволяють полювати
+                                на російську техніку на безпечній відстані, знижуючи ризик життю наших захисників. Тому
+                                ми оголошуємо збір на FPV квадрокоптери.
                                 <a href="https://send.monobank.ua/jar/78S16vcvuR" target="_blank">ЗАДОНАТИТИ>></a>
+                            </p>
+                        </div>
+                        <div class="col-lg-12 sidebar my-4">
+                            <p>
+                                Збирання дронів-камікадзе - не настільки складна справа, як може здатися на перший
+                                погляд. Цьому цілком можна навчитися, навіть не маючи досвіду роботи з електронікою.При
+                                достатньому бажанні та наполегливості кожен може безкоштовно навчитись збирати “смерть
+                                ворогам”, щоб потім передати дрон військовим >>
+                                <a href="https://www.youtube.com/watch?v=75SbiwqW7DM&t=33s" target="_blank">ПОДИВИСЬ>></a>
                             </p>
                         </div>
                         <div class="col-lg-12 sidebar my-4">
                             <p>
                                 FPV окуляри
-Ще 50 років тому людство навіть не уявляло собі можливості транспортування та передачі аудіо- і відеосигналу у режимі реального часу. Про це писали тільки автори фантастичних романів, але і вони не уявляли, що науковий світ продемонструє свої досягнення вже незабаром. Сучасні ноу-хау технологічного прогресу, такі як FPV шолом,  використовуються не тільки для отримання якісного радіосигналу, але й дозволяють спостерігати за локаціями або подіями з висоти пташиного польоту.  
+                                Ще 50 років тому людство навіть не уявляло собі можливості транспортування та передачі
+                                аудіо- і відеосигналу у режимі реального часу. Про це писали тільки автори фантастичних
+                                романів, але і вони не уявляли, що науковий світ продемонструє свої досягнення вже
+                                незабаром. Сучасні ноу-хау технологічного прогресу, такі як FPV шолом, використовуються
+                                не тільки для отримання якісного радіосигналу, але й дозволяють спостерігати за
+                                локаціями або подіями з висоти пташиного польоту.
 
 
                                 <a href="https://send.monobank.ua/jar/78S16vcvuR" target="_blank">ЗАДОНАТИТИ>></a>
@@ -184,7 +216,9 @@
                         </div>
                         <div class="col-lg-12 sidebar my-4">
                             <p>
-                                TX12 Mark II - бюджетний та компактний пульт керування від виробника RadioMaster з прошивкою EdgeTX, регульованими стиками з датчиками Холла та можливістю підключення зовнішніх модулів.
+                                TX12 Mark II - бюджетний та компактний пульт керування від виробника RadioMaster з
+                                прошивкою EdgeTX, регульованими стиками з датчиками Холла та можливістю підключення
+                                зовнішніх модулів.
 
                                 Сумісність: TBS Crossfire Micro
                                 ВЧ-чіп: ExpressLRS (ELRS)/CC2500
@@ -192,12 +226,6 @@
                                 Дисплей: 128*64 монохромний РК-дисплей
                                 Зовнішній модуль: JR/FrSKY/Crossfire сумісний
                                 <a href="https://send.monobank.ua/jar/78S16vcvuR" target="_blank">ЗАДОНАТИТИ>></a>
-                            </p>
-                        </div>
-                        <div class="col-lg-12 sidebar my-4">
-                            <p>
-                                Збирання дронів-камікадзе - не настільки складна справа, як може здатися на перший погляд. Цьому цілком можна навчитися, навіть не маючи досвіду роботи з електронікою.При достатньому бажанні та наполегливості кожен може безкоштовно навчитись збирати “смерть ворогам”, щоб потім передати дрон військовим    
-                                <a href="https://www.youtube.com/watch?v=75SbiwqW7DM&t=33s" target="_blank">PRESS>></a>
                             </p>
                         </div>
                     </div>
@@ -208,16 +236,21 @@
 
     <footer class="mt-4">
         <div class="container-fluid">
+
+
             <div class="row">
+
                 <div class="col-lg-4 col-md-12 footer-text text-center">
                     <p>All Rights Reserved 2023</p>
                 </div>
+
                 <div class="col-lg-4 col-md-12 footer-text text-center">
                     <p>Contacts<br />Job<br />Our Team</p>
                 </div>
                 <div class="col-lg-4 col-md-12 media-links">
-                    <img style="width: 55px; margin-inline: 1em" src="styles/image/telega.jpeg" alt="..." />
-                   <a href="https://www.youtube.com/watch?v=75SbiwqW7DM&t=33s" target="_blank"> <img style="width: 55px; margin-inline: 1em" src="styles/image/yout.jpeg" alt="..." /></a>
+                   <a href="https://web.telegram.org/k/#@brdprotiv" target="_blank"> <img style="width: 55px; margin-inline: 1em" src="styles/image/telega.jpeg" alt="..." /></a>
+                    <a href="https://www.youtube.com/watch?v=75SbiwqW7DM&t=33s" target="_blank"> <img
+                            style="width: 55px; margin-inline: 1em" src="styles/image/yout.jpeg" alt="..." /></a>
                 </div>
             </div>
         </div>
