--- a/video.html
+++ b/video.html
@@ -8,10 +8,10 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="styles/styles/mystyle.css" />
     <link rel="stylesheet" href="styles/styles/bgvideo.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="styles/image/favicon_io /apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="styles/image/favicon_io /favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="styles/image/favicon_io /favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="apple-touch-icon" sizes="180x180" href="styles/image/favicon_io /apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="styles/image/favicon_io /favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="styles/image/favicon_io /favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 
     <title>КОЩЕЙ</title>
 </head>
