--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--  nav bar -->
     <nav class="navbar navbar-expand-lg bg-body-secondary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">ДОМОЙ</a>
+            <a class="navbar-brand" href="/">ДОМОЙ</a>
 
             <a href="https://web.telegram.org/k/#@brdprotiv" target="_blank">
                 <img style="width: 35px; margin-inline: 1em" src="images/telega.jpeg" alt="..." /></a>
