--- a/2022.html
+++ b/2022.html
@@ -15,7 +15,7 @@
     <!--  nav bar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">ДОМОЙ</a>
+            <a class="navbar-brand" href="/">ДОМОЙ</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
