--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <!-- left bar -->
                 <div class="col-lg-3 col-md-12">
                     <div class="bgvideo">
-                        <video src="images/121.mp4" type="video/mp4" controls
+                        <video src="images/121.mp4" type="video/mp4" controls autoplay
                             ></video>
                         <div class="effect"></div>
                         <div class="video-text text-center">
