--- a/index.html
+++ b/index.html
@@ -58,16 +58,11 @@
                 <!-- left bar -->
                 <div class="col-lg-3 col-md-12">
                     <div class="bgvideo">
-                        <video src="images/121.mp4" type="video/mp4" autoplay
+                        <video src="images/121.mp4" type="video/mp4" autoplay controls
                             ></video>
-                        <div class="effect"></div>
+                       
                         <div class="video-text text-center">
-                            <a href="https://www.google.com/maps/@46.7573586,36.8167763,3a,15y,264.84h,40.42t/data=!3m7!1e1!3m5!1sAF1QipPgrqOVXRZyt5qvOsrBn5lRdxbp-vVrdU-npSRF!2e10!3e12!7i14000!8i7000?entry=ttu"
-                                >
-                                <button type="button" class="btn btn-outline-light btn-lg">
-                                    НАШ ДОМ
-                                </button>
-                            </a>
+                           
                         </div>
                     </div>
                     <div class="text-leftbar">
