--- a/index.html
+++ b/index.html
@@ -218,7 +218,8 @@
                 <!-- right bar -->
                 <div class="col-lg-3 col-md-12">
                     <div class="bgvideo">
-                        <video src="images/2.mp4" type="video/mp4" controls ></video>
+                        <video src="images/121.mp4" type="video/mp4" controls
+                            ></video>
                         <div class="effect"></div>
                         <div class="video-text text-center">
                             <a href="https://www.google.com/maps/@46.7264634,36.8158799,3a,66.2y,301.92h,83.18t/data=!3m8!1e1!3m6!1sAF1QipM2A7qY9qjr_bU5BLKUR3crFTBatx-IsvBXQP3P!2e10!3e11!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipM2A7qY9qjr_bU5BLKUR3crFTBatx-IsvBXQP3P%3Dw203-h100-k-no-pi-10-ya333.94257-ro-0-fo100!7i14000!8i7000?entry=ttu"
