--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <div class="col-lg-3 col-md-12">
 
                     <div class="bgvideo">
-                        <video src="images/2.mp4" type="video/mp4" controls></video>
+                        <video src="images/2.mp4" type="video/mp4" controls autoplay></video>
 
                     </div>
                     <div class="text-rightbar">
