--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                 <img src="images/2023top.jpeg" class="d-block w-100" alt="..." />
                                 <div class="carousel-caption  d-md-block">
                                     <a href="2023.html">
-                                        <h5>2023 Жми там фото</h5>
+                                        <h5>2023 Жми ТАМ ФОТО</h5>
                                     </a>
                                     <p>
                                     </p>
