--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                 <!-- RD Navbar Brand-->
                 <div class="rd-navbar-brand">
-                  <!--Brand--><a class="brand" href="index.html"><img src="images/logo-default-450x37.png" alt="" /></a>
+                  <!--Brand--><a class="brand" href="/"><img src="images/logo-default-450x37.png" alt="" /></a>
                 </div>
               </div>
               <div class="rd-navbar-aside-right rd-navbar-collapse">
@@ -105,7 +105,7 @@
                 </ul>
                 <!-- RD Navbar Nav-->
                 <ul class="rd-navbar-nav">
-                  <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">Home</a>
+                  <li class="rd-nav-item active"><a class="rd-nav-link" href="/">Home</a>
                   </li>
                   <li class="rd-nav-item"><a class="rd-nav-link" href="antidron.html">АНТІДРОН</a>
                   </li>
@@ -618,7 +618,7 @@
                     <li><a href="typography.html">МІНОШУКАЧІ</a></li>
                   </ul>
                   <div class="group-md group-middle justify-content-sm-start"><a
-                      class="button button-lg button-primary button-ujarak" href="index.html">home</a></div>
+                      class="button button-lg button-primary button-ujarak" href="/">home</a></div>
                 </div>
               </div>
             </div>
