--- a/antidron.html
+++ b/antidron.html
@@ -61,7 +61,7 @@
                                 data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                             <!-- RD Navbar Brand-->
                             <div class="rd-navbar-brand">
-                                <!--Brand--><a class="brand" href="index.html"><img src="images/logo-default-450x37.png"
+                                <!--Brand--><a class="brand" href="/"><img src="images/logo-default-450x37.png"
                                         alt="" /></a>
                             </div>
                         </div>
@@ -99,7 +99,7 @@
                             </ul>
                             <!-- RD Navbar Nav-->
                             <ul class="rd-navbar-nav">
-                                <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Home</a>
+                                <li class="rd-nav-item"><a class="rd-nav-link" href="/">Home</a>
                                 </li>
                                 <li class="rd-nav-item active"><a class="rd-nav-link" href="antidron.html">АНТІДРОН</a>
                                 </li>
@@ -351,7 +351,7 @@
                                     <li><a href="typography.html">МІНОШУКАЧІ</a></li>
                                 </ul>
                                 <div class="group-md group-middle justify-content-sm-start"><a
-                                        class="button button-lg button-primary button-ujarak" href="index.html">home</a>
+                                        class="button button-lg button-primary button-ujarak" href="/">home</a>
                                 </div>
                             </div>
                         </div>
@@ -380,7 +380,7 @@
                         <p class="rights"><span>&copy;&nbsp;</span><span
                                 class="copyright-year"></span><span>&nbsp;</span><span></span>. All Rights Reserved.
                             Design
-                            by <a href="#">KOSCHEY</a></p>
+                            by <a href="/">KOSCHEY</a></p>
                     </div>
                     <div class="col-sm-6 col-md-4 text-md-right">
                         <p class="rights"><a href="#">Privacy Policy</a></p>
