--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
               </div>
               <div class="team-modern-caption">
                 <h6 class="team-modern-name"><a href="#">Mr.Sergiy</a></h6>
-                <p class="team-modern-status">Head of Mafia</p>
+                <p class="team-modern-status">GENERAL DIRECTOR</p>
                 <h6 class="team-modern-phone"><a href="tel:#">+1 323-913-4688</a></h6>
               </div>
             </article>
@@ -411,9 +411,9 @@
                 </svg>
               </div>
               <div class="team-modern-caption">
-                <h6 class="team-modern-name"><a href="#">Mr.RENE</a></h6>
+                <h6 class="team-modern-name"><a href="#">Mr.Yuriy</a></h6>
                 <p class="team-modern-status">
-                  GENERAL SPONSOR OF VICTORY</p>
+                  GENERAL DESIGNER</p>
                 <h6 class="team-modern-phone"><a href="tel:#">+49 175-864-9767</a></h6>
               </div>
             </article>
